Generate Makefile.in regarding :'Remove all non-mandatory header file. See SEP #35 for the rational and the list'

--- a/scilab/modules/arnoldi/Makefile.in
+++ b/scilab/modules/arnoldi/Makefile.in
@@ -37,7 +37,6 @@
 ##########
 
 
-
 VPATH = @srcdir@
 pkgdatadir = $(datadir)/@PACKAGE@
 pkgincludedir = $(includedir)/@PACKAGE@
@@ -57,8 +56,7 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
-DIST_COMMON = $(libsciarnoldi_la_include_HEADERS) \
-	$(srcdir)/Makefile.am $(srcdir)/Makefile.in \
+DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in \
 	$(top_srcdir)/Makefile.incl.am
 @NEED_JAVA_TRUE@am__append_1 = java
 subdir = modules/arnoldi
@@ -106,8 +104,7 @@ am__base_list = \
 am__installdirs = "$(DESTDIR)$(pkglibdir)" \
 	"$(DESTDIR)$(libsciarnoldi_la_etcdir)" \
 	"$(DESTDIR)$(libsciarnoldi_la_rootdir)" \
-	"$(DESTDIR)$(libsciarnoldi_la_sci_gatewaydir)" \
-	"$(DESTDIR)$(libsciarnoldi_la_includedir)"
+	"$(DESTDIR)$(libsciarnoldi_la_sci_gatewaydir)"
 LTLIBRARIES = $(pkglib_LTLIBRARIES)
 libsciarnoldi_la_DEPENDENCIES =  \
 	$(top_builddir)/modules/core/libscicore.la
@@ -170,7 +167,6 @@ SOURCES = $(libsciarnoldi_la_SOURCES)
 DIST_SOURCES = $(libsciarnoldi_la_SOURCES)
 DATA = $(libsciarnoldi_la_etc_DATA) $(libsciarnoldi_la_root_DATA) \
 	$(libsciarnoldi_la_sci_gateway_DATA)
-HEADERS = $(libsciarnoldi_la_include_HEADERS)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
@@ -493,12 +489,6 @@ libsciarnoldi_la_etc_DATA = etc/arnoldi.quit etc/arnoldi.start
 #### arnoldi : gateway declaration ####
 libsciarnoldi_la_sci_gatewaydir = $(mydatadir)/sci_gateway
 libsciarnoldi_la_sci_gateway_DATA = sci_gateway/arnoldi_gateway.xml
-
-#### arnoldi : include files ####
-libsciarnoldi_la_includedir = $(pkgincludedir)
-libsciarnoldi_la_include_HEADERS = includes/gw_arnoldi.h \
-	includes/dynlib_arnoldi.h
-
 
 # Where all the Scilab stuff is installed (macros, help, ...)
 mydatadir = $(pkgdatadir)/modules/$(modulename)
@@ -938,26 +928,6 @@ uninstall-libsciarnoldi_la_sci_gatewayDATA:
 	test -n "$$files" || exit 0; \
 	echo " ( cd '$(DESTDIR)$(libsciarnoldi_la_sci_gatewaydir)' && rm -f" $$files ")"; \
 	cd "$(DESTDIR)$(libsciarnoldi_la_sci_gatewaydir)" && rm -f $$files
-install-libsciarnoldi_la_includeHEADERS: $(libsciarnoldi_la_include_HEADERS)
-	@$(NORMAL_INSTALL)
-	test -z "$(libsciarnoldi_la_includedir)" || $(MKDIR_P) "$(DESTDIR)$(libsciarnoldi_la_includedir)"
-	@list='$(libsciarnoldi_la_include_HEADERS)'; test -n "$(libsciarnoldi_la_includedir)" || list=; \
-	for p in $$list; do \
-	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
-	  echo "$$d$$p"; \
-	done | $(am__base_list) | \
-	while read files; do \
-	  echo " $(INSTALL_HEADER) $$files '$(DESTDIR)$(libsciarnoldi_la_includedir)'"; \
-	  $(INSTALL_HEADER) $$files "$(DESTDIR)$(libsciarnoldi_la_includedir)" || exit $$?; \
-	done
-
-uninstall-libsciarnoldi_la_includeHEADERS:
-	@$(NORMAL_UNINSTALL)
-	@list='$(libsciarnoldi_la_include_HEADERS)'; test -n "$(libsciarnoldi_la_includedir)" || list=; \
-	files=`for p in $$list; do echo $$p; done | sed -e 's|^.*/||'`; \
-	test -n "$$files" || exit 0; \
-	echo " ( cd '$(DESTDIR)$(libsciarnoldi_la_includedir)' && rm -f" $$files ")"; \
-	cd "$(DESTDIR)$(libsciarnoldi_la_includedir)" && rm -f $$files
 
 ID: $(HEADERS) $(SOURCES) $(LISP) $(TAGS_FILES)
 	list='$(SOURCES) $(HEADERS) $(LISP) $(TAGS_FILES)'; \
@@ -1044,9 +1014,9 @@ distdir: $(DISTFILES)
 check-am: all-am
 	$(MAKE) $(AM_MAKEFLAGS) check-local
 check: check-am
-all-am: Makefile $(LTLIBRARIES) $(DATA) $(HEADERS) all-local
+all-am: Makefile $(LTLIBRARIES) $(DATA) all-local
 installdirs:
-	for dir in "$(DESTDIR)$(pkglibdir)" "$(DESTDIR)$(libsciarnoldi_la_etcdir)" "$(DESTDIR)$(libsciarnoldi_la_rootdir)" "$(DESTDIR)$(libsciarnoldi_la_sci_gatewaydir)" "$(DESTDIR)$(libsciarnoldi_la_includedir)"; do \
+	for dir in "$(DESTDIR)$(pkglibdir)" "$(DESTDIR)$(libsciarnoldi_la_etcdir)" "$(DESTDIR)$(libsciarnoldi_la_rootdir)" "$(DESTDIR)$(libsciarnoldi_la_sci_gatewaydir)"; do \
 	  test -z "$$dir" || $(MKDIR_P) "$$dir"; \
 	done
 install: install-am
@@ -1098,7 +1068,6 @@ info: info-am
 info-am:
 
 install-data-am: install-data-local install-libsciarnoldi_la_etcDATA \
-	install-libsciarnoldi_la_includeHEADERS \
 	install-libsciarnoldi_la_rootDATA \
 	install-libsciarnoldi_la_sci_gatewayDATA
 
@@ -1147,7 +1116,6 @@ ps: ps-am
 ps-am:
 
 uninstall-am: uninstall-libsciarnoldi_la_etcDATA \
-	uninstall-libsciarnoldi_la_includeHEADERS \
 	uninstall-libsciarnoldi_la_rootDATA \
 	uninstall-libsciarnoldi_la_sci_gatewayDATA \
 	uninstall-pkglibLTLIBRARIES
@@ -1164,7 +1132,6 @@ uninstall-am: uninstall-libsciarnoldi_la_etcDATA \
 	install-exec-am install-html install-html-am \
 	install-html-local install-info install-info-am \
 	install-libsciarnoldi_la_etcDATA \
-	install-libsciarnoldi_la_includeHEADERS \
 	install-libsciarnoldi_la_rootDATA \
 	install-libsciarnoldi_la_sci_gatewayDATA install-man \
 	install-pdf install-pdf-am install-pkglibLTLIBRARIES \
@@ -1173,7 +1140,6 @@ uninstall-am: uninstall-libsciarnoldi_la_etcDATA \
 	maintainer-clean-generic mostlyclean mostlyclean-compile \
 	mostlyclean-generic mostlyclean-libtool pdf pdf-am ps ps-am \
 	tags uninstall uninstall-am uninstall-libsciarnoldi_la_etcDATA \
-	uninstall-libsciarnoldi_la_includeHEADERS \
 	uninstall-libsciarnoldi_la_rootDATA \
 	uninstall-libsciarnoldi_la_sci_gatewayDATA \
 	uninstall-pkglibLTLIBRARIES
