--- a/scilab/modules/functions/Makefile.in
+++ b/scilab/modules/functions/Makefile.in
@@ -37,7 +37,6 @@
 ##########
 
 
-
 VPATH = @srcdir@
 pkgdatadir = $(datadir)/@PACKAGE@
 pkgincludedir = $(includedir)/@PACKAGE@
@@ -57,8 +56,7 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
-DIST_COMMON = $(libscifunctions_la_include_HEADERS) \
-	$(srcdir)/Makefile.am $(srcdir)/Makefile.in \
+DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in \
 	$(top_srcdir)/Makefile.incl.am
 @NEED_JAVA_TRUE@am__append_1 = java
 subdir = modules/functions
@@ -106,8 +104,7 @@ am__base_list = \
 am__installdirs = "$(DESTDIR)$(pkglibdir)" \
 	"$(DESTDIR)$(libscifunctions_la_etcdir)" \
 	"$(DESTDIR)$(libscifunctions_la_rootdir)" \
-	"$(DESTDIR)$(libscifunctions_la_sci_gatewaydir)" \
-	"$(DESTDIR)$(libscifunctions_la_includedir)"
+	"$(DESTDIR)$(libscifunctions_la_sci_gatewaydir)"
 LTLIBRARIES = $(pkglib_LTLIBRARIES)
 libscifunctions_la_DEPENDENCIES =  \
 	$(top_builddir)/modules/core/libscicore.la \
@@ -160,7 +157,6 @@ SOURCES = $(libscifunctions_la_SOURCES)
 DIST_SOURCES = $(libscifunctions_la_SOURCES)
 DATA = $(libscifunctions_la_etc_DATA) $(libscifunctions_la_root_DATA) \
 	$(libscifunctions_la_sci_gateway_DATA)
-HEADERS = $(libscifunctions_la_include_HEADERS)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
@@ -455,15 +451,6 @@ libscifunctions_la_etc_DATA = etc/functions.quit etc/functions.start
 #### functions : gateway declaration ####
 libscifunctions_la_sci_gatewaydir = $(mydatadir)/sci_gateway
 libscifunctions_la_sci_gateway_DATA = sci_gateway/functions_gateway.xml
-
-#### functions : include files ####
-libscifunctions_la_includedir = $(pkgincludedir)
-libscifunctions_la_include_HEADERS = includes/gw_functions.h \
-	includes/librarieslist.h \
-	includes/libraryinfo.h \
-	includes/getmacroslist.h \
-	includes/dynlib_functions.h
-
 
 # Where all the Scilab stuff is installed (macros, help, ...)
 mydatadir = $(pkgdatadir)/modules/$(modulename)
@@ -819,26 +806,6 @@ uninstall-libscifunctions_la_sci_gatewayDATA:
 	test -n "$$files" || exit 0; \
 	echo " ( cd '$(DESTDIR)$(libscifunctions_la_sci_gatewaydir)' && rm -f" $$files ")"; \
 	cd "$(DESTDIR)$(libscifunctions_la_sci_gatewaydir)" && rm -f $$files
-install-libscifunctions_la_includeHEADERS: $(libscifunctions_la_include_HEADERS)
-	@$(NORMAL_INSTALL)
-	test -z "$(libscifunctions_la_includedir)" || $(MKDIR_P) "$(DESTDIR)$(libscifunctions_la_includedir)"
-	@list='$(libscifunctions_la_include_HEADERS)'; test -n "$(libscifunctions_la_includedir)" || list=; \
-	for p in $$list; do \
-	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
-	  echo "$$d$$p"; \
-	done | $(am__base_list) | \
-	while read files; do \
-	  echo " $(INSTALL_HEADER) $$files '$(DESTDIR)$(libscifunctions_la_includedir)'"; \
-	  $(INSTALL_HEADER) $$files "$(DESTDIR)$(libscifunctions_la_includedir)" || exit $$?; \
-	done
-
-uninstall-libscifunctions_la_includeHEADERS:
-	@$(NORMAL_UNINSTALL)
-	@list='$(libscifunctions_la_include_HEADERS)'; test -n "$(libscifunctions_la_includedir)" || list=; \
-	files=`for p in $$list; do echo $$p; done | sed -e 's|^.*/||'`; \
-	test -n "$$files" || exit 0; \
-	echo " ( cd '$(DESTDIR)$(libscifunctions_la_includedir)' && rm -f" $$files ")"; \
-	cd "$(DESTDIR)$(libscifunctions_la_includedir)" && rm -f $$files
 
 ID: $(HEADERS) $(SOURCES) $(LISP) $(TAGS_FILES)
 	list='$(SOURCES) $(HEADERS) $(LISP) $(TAGS_FILES)'; \
@@ -925,9 +892,9 @@ distdir: $(DISTFILES)
 check-am: all-am
 	$(MAKE) $(AM_MAKEFLAGS) check-local
 check: check-am
-all-am: Makefile $(LTLIBRARIES) $(DATA) $(HEADERS) all-local
+all-am: Makefile $(LTLIBRARIES) $(DATA) all-local
 installdirs:
-	for dir in "$(DESTDIR)$(pkglibdir)" "$(DESTDIR)$(libscifunctions_la_etcdir)" "$(DESTDIR)$(libscifunctions_la_rootdir)" "$(DESTDIR)$(libscifunctions_la_sci_gatewaydir)" "$(DESTDIR)$(libscifunctions_la_includedir)"; do \
+	for dir in "$(DESTDIR)$(pkglibdir)" "$(DESTDIR)$(libscifunctions_la_etcdir)" "$(DESTDIR)$(libscifunctions_la_rootdir)" "$(DESTDIR)$(libscifunctions_la_sci_gatewaydir)"; do \
 	  test -z "$$dir" || $(MKDIR_P) "$$dir"; \
 	done
 install: install-am
@@ -979,7 +946,6 @@ info: info-am
 info-am:
 
 install-data-am: install-data-local install-libscifunctions_la_etcDATA \
-	install-libscifunctions_la_includeHEADERS \
 	install-libscifunctions_la_rootDATA \
 	install-libscifunctions_la_sci_gatewayDATA
 
@@ -1028,7 +994,6 @@ ps: ps-am
 ps-am:
 
 uninstall-am: uninstall-libscifunctions_la_etcDATA \
-	uninstall-libscifunctions_la_includeHEADERS \
 	uninstall-libscifunctions_la_rootDATA \
 	uninstall-libscifunctions_la_sci_gatewayDATA \
 	uninstall-pkglibLTLIBRARIES
@@ -1045,7 +1010,6 @@ uninstall-am: uninstall-libscifunctions_la_etcDATA \
 	install-exec-am install-html install-html-am \
 	install-html-local install-info install-info-am \
 	install-libscifunctions_la_etcDATA \
-	install-libscifunctions_la_includeHEADERS \
 	install-libscifunctions_la_rootDATA \
 	install-libscifunctions_la_sci_gatewayDATA install-man \
 	install-pdf install-pdf-am install-pkglibLTLIBRARIES \
@@ -1055,7 +1019,6 @@ uninstall-am: uninstall-libscifunctions_la_etcDATA \
 	mostlyclean-generic mostlyclean-libtool pdf pdf-am ps ps-am \
 	tags uninstall uninstall-am \
 	uninstall-libscifunctions_la_etcDATA \
-	uninstall-libscifunctions_la_includeHEADERS \
 	uninstall-libscifunctions_la_rootDATA \
 	uninstall-libscifunctions_la_sci_gatewayDATA \
 	uninstall-pkglibLTLIBRARIES
