--- a/scilab/modules/differential_equations/Makefile.in
+++ b/scilab/modules/differential_equations/Makefile.in
@@ -37,7 +37,6 @@
 ##########
 
 
-
 VPATH = @srcdir@
 pkgdatadir = $(datadir)/@PACKAGE@
 pkgincludedir = $(includedir)/@PACKAGE@
@@ -57,8 +56,7 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
-DIST_COMMON = $(libscidifferential_equations_la_include_HEADERS) \
-	$(srcdir)/Makefile.am $(srcdir)/Makefile.in \
+DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in \
 	$(top_srcdir)/Makefile.incl.am
 @NEED_JAVA_TRUE@am__append_1 = java
 subdir = modules/differential_equations
@@ -106,8 +104,7 @@ am__base_list = \
 am__installdirs = "$(DESTDIR)$(pkglibdir)" \
 	"$(DESTDIR)$(libscidifferential_equations_la_etcdir)" \
 	"$(DESTDIR)$(libscidifferential_equations_la_rootdir)" \
-	"$(DESTDIR)$(libscidifferential_equations_la_sci_gatewaydir)" \
-	"$(DESTDIR)$(libscidifferential_equations_la_includedir)"
+	"$(DESTDIR)$(libscidifferential_equations_la_sci_gatewaydir)"
 LTLIBRARIES = $(pkglib_LTLIBRARIES)
 libscidifferential_equations_la_DEPENDENCIES =  \
 	$(top_builddir)/modules/core/libscicore.la \
@@ -191,7 +188,6 @@ DIST_SOURCES = $(libscidifferential_equations_la_SOURCES)
 DATA = $(libscidifferential_equations_la_etc_DATA) \
 	$(libscidifferential_equations_la_root_DATA) \
 	$(libscidifferential_equations_la_sci_gateway_DATA)
-HEADERS = $(libscidifferential_equations_la_include_HEADERS)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
@@ -575,15 +571,6 @@ libscidifferential_equations_la_etc_DATA = etc/differential_equations.quit etc/d
 #### differential_equations : gateway declaration ####
 libscidifferential_equations_la_sci_gatewaydir = $(mydatadir)/sci_gateway
 libscidifferential_equations_la_sci_gateway_DATA = sci_gateway/differential_equations_gateway.xml
-
-#### differential_equations : include files ####
-libscidifferential_equations_la_includedir = $(pkgincludedir)
-libscidifferential_equations_la_include_HEADERS = includes/gw_differential_equations1.h \
-includes/gw_differential_equations2.h \
-includes/gw_differential_equations3.h \
-includes/gw_differential_equations4.h \
-includes/gw_differential_equations6.h
-
 
 # Where all the Scilab stuff is installed (macros, help, ...)
 mydatadir = $(pkgdatadir)/modules/$(modulename)
@@ -1290,26 +1277,6 @@ uninstall-libscidifferential_equations_la_sci_gatewayDATA:
 	test -n "$$files" || exit 0; \
 	echo " ( cd '$(DESTDIR)$(libscidifferential_equations_la_sci_gatewaydir)' && rm -f" $$files ")"; \
 	cd "$(DESTDIR)$(libscidifferential_equations_la_sci_gatewaydir)" && rm -f $$files
-install-libscidifferential_equations_la_includeHEADERS: $(libscidifferential_equations_la_include_HEADERS)
-	@$(NORMAL_INSTALL)
-	test -z "$(libscidifferential_equations_la_includedir)" || $(MKDIR_P) "$(DESTDIR)$(libscidifferential_equations_la_includedir)"
-	@list='$(libscidifferential_equations_la_include_HEADERS)'; test -n "$(libscidifferential_equations_la_includedir)" || list=; \
-	for p in $$list; do \
-	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
-	  echo "$$d$$p"; \
-	done | $(am__base_list) | \
-	while read files; do \
-	  echo " $(INSTALL_HEADER) $$files '$(DESTDIR)$(libscidifferential_equations_la_includedir)'"; \
-	  $(INSTALL_HEADER) $$files "$(DESTDIR)$(libscidifferential_equations_la_includedir)" || exit $$?; \
-	done
-
-uninstall-libscidifferential_equations_la_includeHEADERS:
-	@$(NORMAL_UNINSTALL)
-	@list='$(libscidifferential_equations_la_include_HEADERS)'; test -n "$(libscidifferential_equations_la_includedir)" || list=; \
-	files=`for p in $$list; do echo $$p; done | sed -e 's|^.*/||'`; \
-	test -n "$$files" || exit 0; \
-	echo " ( cd '$(DESTDIR)$(libscidifferential_equations_la_includedir)' && rm -f" $$files ")"; \
-	cd "$(DESTDIR)$(libscidifferential_equations_la_includedir)" && rm -f $$files
 
 ID: $(HEADERS) $(SOURCES) $(LISP) $(TAGS_FILES)
 	list='$(SOURCES) $(HEADERS) $(LISP) $(TAGS_FILES)'; \
@@ -1396,9 +1363,9 @@ distdir: $(DISTFILES)
 check-am: all-am
 	$(MAKE) $(AM_MAKEFLAGS) check-local
 check: check-am
-all-am: Makefile $(LTLIBRARIES) $(DATA) $(HEADERS) all-local
+all-am: Makefile $(LTLIBRARIES) $(DATA) all-local
 installdirs:
-	for dir in "$(DESTDIR)$(pkglibdir)" "$(DESTDIR)$(libscidifferential_equations_la_etcdir)" "$(DESTDIR)$(libscidifferential_equations_la_rootdir)" "$(DESTDIR)$(libscidifferential_equations_la_sci_gatewaydir)" "$(DESTDIR)$(libscidifferential_equations_la_includedir)"; do \
+	for dir in "$(DESTDIR)$(pkglibdir)" "$(DESTDIR)$(libscidifferential_equations_la_etcdir)" "$(DESTDIR)$(libscidifferential_equations_la_rootdir)" "$(DESTDIR)$(libscidifferential_equations_la_sci_gatewaydir)"; do \
 	  test -z "$$dir" || $(MKDIR_P) "$$dir"; \
 	done
 install: install-am
@@ -1451,7 +1418,6 @@ info-am:
 
 install-data-am: install-data-local \
 	install-libscidifferential_equations_la_etcDATA \
-	install-libscidifferential_equations_la_includeHEADERS \
 	install-libscidifferential_equations_la_rootDATA \
 	install-libscidifferential_equations_la_sci_gatewayDATA
 
@@ -1500,7 +1466,6 @@ ps: ps-am
 ps-am:
 
 uninstall-am: uninstall-libscidifferential_equations_la_etcDATA \
-	uninstall-libscidifferential_equations_la_includeHEADERS \
 	uninstall-libscidifferential_equations_la_rootDATA \
 	uninstall-libscidifferential_equations_la_sci_gatewayDATA \
 	uninstall-pkglibLTLIBRARIES
@@ -1517,7 +1482,6 @@ uninstall-am: uninstall-libscidifferential_equations_la_etcDATA \
 	install-exec-am install-html install-html-am \
 	install-html-local install-info install-info-am \
 	install-libscidifferential_equations_la_etcDATA \
-	install-libscidifferential_equations_la_includeHEADERS \
 	install-libscidifferential_equations_la_rootDATA \
 	install-libscidifferential_equations_la_sci_gatewayDATA \
 	install-man install-pdf install-pdf-am \
@@ -1527,7 +1491,6 @@ uninstall-am: uninstall-libscidifferential_equations_la_etcDATA \
 	mostlyclean-compile mostlyclean-generic mostlyclean-libtool \
 	pdf pdf-am ps ps-am tags uninstall uninstall-am \
 	uninstall-libscidifferential_equations_la_etcDATA \
-	uninstall-libscidifferential_equations_la_includeHEADERS \
 	uninstall-libscidifferential_equations_la_rootDATA \
 	uninstall-libscidifferential_equations_la_sci_gatewayDATA \
 	uninstall-pkglibLTLIBRARIES
