--- a/scilab/modules/dynamic_link/Makefile.in
+++ b/scilab/modules/dynamic_link/Makefile.in
@@ -38,7 +38,6 @@
 
 
 
-
 VPATH = @srcdir@
 pkgdatadir = $(datadir)/@PACKAGE@
 pkgincludedir = $(includedir)/@PACKAGE@
@@ -58,8 +57,7 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
-DIST_COMMON = $(libscidynamic_link_la_include_HEADERS) \
-	$(srcdir)/Makefile.am $(srcdir)/Makefile.in \
+DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in \
 	$(top_srcdir)/Makefile.incl.am
 @NEED_JAVA_TRUE@am__append_1 = java
 subdir = modules/dynamic_link
@@ -109,8 +107,7 @@ am__installdirs = "$(DESTDIR)$(pkglibdir)" \
 	"$(DESTDIR)$(libscidynamic_link_la_etcdir)" \
 	"$(DESTDIR)$(libscidynamic_link_la_rootdir)" \
 	"$(DESTDIR)$(libscidynamic_link_la_sci_gatewaydir)" \
-	"$(DESTDIR)$(libscidynamic_link_la_scriptdir)" \
-	"$(DESTDIR)$(libscidynamic_link_la_includedir)"
+	"$(DESTDIR)$(libscidynamic_link_la_scriptdir)"
 LTLIBRARIES = $(pkglib_LTLIBRARIES)
 libscidynamic_link_la_DEPENDENCIES =  \
 	$(top_builddir)/modules/arnoldi/libsciarnoldi.la \
@@ -166,7 +163,6 @@ DATA = $(libscidynamic_link_la_etc_DATA) \
 	$(libscidynamic_link_la_root_DATA) \
 	$(libscidynamic_link_la_sci_gateway_DATA) \
 	$(libscidynamic_link_la_script_DATA)
-HEADERS = $(libscidynamic_link_la_include_HEADERS)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
@@ -449,16 +445,6 @@ libscidynamic_link_la_etc_DATA = etc/dynamic_link.quit etc/dynamic_link.start
 #### dynamic_link : gateway declaration ####
 libscidynamic_link_la_sci_gatewaydir = $(mydatadir)/sci_gateway
 libscidynamic_link_la_sci_gateway_DATA = sci_gateway/dynamic_link_gateway.xml
-
-#### dynamic_link : include files ####
-libscidynamic_link_la_includedir = $(pkgincludedir)
-libscidynamic_link_la_include_HEADERS = includes/AddFunctionInTable.h \
-includes/addinter.h \
-includes/dynamic_link.h \
-includes/gw_dynamic_link.h \
-includes/dynlib_dynamic_link.h \
-includes/ilib_verbose.h 
-
 
 #### dynamic_link : compilation scripts #### 
 libscidynamic_link_la_scriptdir = $(mydatadir)/src/scripts/
@@ -871,26 +857,6 @@ uninstall-libscidynamic_link_la_scriptDATA:
 	test -n "$$files" || exit 0; \
 	echo " ( cd '$(DESTDIR)$(libscidynamic_link_la_scriptdir)' && rm -f" $$files ")"; \
 	cd "$(DESTDIR)$(libscidynamic_link_la_scriptdir)" && rm -f $$files
-install-libscidynamic_link_la_includeHEADERS: $(libscidynamic_link_la_include_HEADERS)
-	@$(NORMAL_INSTALL)
-	test -z "$(libscidynamic_link_la_includedir)" || $(MKDIR_P) "$(DESTDIR)$(libscidynamic_link_la_includedir)"
-	@list='$(libscidynamic_link_la_include_HEADERS)'; test -n "$(libscidynamic_link_la_includedir)" || list=; \
-	for p in $$list; do \
-	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
-	  echo "$$d$$p"; \
-	done | $(am__base_list) | \
-	while read files; do \
-	  echo " $(INSTALL_HEADER) $$files '$(DESTDIR)$(libscidynamic_link_la_includedir)'"; \
-	  $(INSTALL_HEADER) $$files "$(DESTDIR)$(libscidynamic_link_la_includedir)" || exit $$?; \
-	done
-
-uninstall-libscidynamic_link_la_includeHEADERS:
-	@$(NORMAL_UNINSTALL)
-	@list='$(libscidynamic_link_la_include_HEADERS)'; test -n "$(libscidynamic_link_la_includedir)" || list=; \
-	files=`for p in $$list; do echo $$p; done | sed -e 's|^.*/||'`; \
-	test -n "$$files" || exit 0; \
-	echo " ( cd '$(DESTDIR)$(libscidynamic_link_la_includedir)' && rm -f" $$files ")"; \
-	cd "$(DESTDIR)$(libscidynamic_link_la_includedir)" && rm -f $$files
 
 ID: $(HEADERS) $(SOURCES) $(LISP) $(TAGS_FILES)
 	list='$(SOURCES) $(HEADERS) $(LISP) $(TAGS_FILES)'; \
@@ -977,10 +943,9 @@ distdir: $(DISTFILES)
 check-am: all-am
 	$(MAKE) $(AM_MAKEFLAGS) check-local
 check: check-am
-all-am: Makefile $(LTLIBRARIES) $(SCRIPTS) $(DATA) $(HEADERS) \
-		all-local
+all-am: Makefile $(LTLIBRARIES) $(SCRIPTS) $(DATA) all-local
 installdirs:
-	for dir in "$(DESTDIR)$(pkglibdir)" "$(DESTDIR)$(libscidynamic_link_la_scriptdir)" "$(DESTDIR)$(libscidynamic_link_la_etcdir)" "$(DESTDIR)$(libscidynamic_link_la_rootdir)" "$(DESTDIR)$(libscidynamic_link_la_sci_gatewaydir)" "$(DESTDIR)$(libscidynamic_link_la_scriptdir)" "$(DESTDIR)$(libscidynamic_link_la_includedir)"; do \
+	for dir in "$(DESTDIR)$(pkglibdir)" "$(DESTDIR)$(libscidynamic_link_la_scriptdir)" "$(DESTDIR)$(libscidynamic_link_la_etcdir)" "$(DESTDIR)$(libscidynamic_link_la_rootdir)" "$(DESTDIR)$(libscidynamic_link_la_sci_gatewaydir)" "$(DESTDIR)$(libscidynamic_link_la_scriptdir)"; do \
 	  test -z "$$dir" || $(MKDIR_P) "$$dir"; \
 	done
 install: install-am
@@ -1033,7 +998,6 @@ info-am:
 
 install-data-am: install-data-local \
 	install-libscidynamic_link_la_etcDATA \
-	install-libscidynamic_link_la_includeHEADERS \
 	install-libscidynamic_link_la_rootDATA \
 	install-libscidynamic_link_la_sci_gatewayDATA \
 	install-libscidynamic_link_la_scriptDATA \
@@ -1084,7 +1048,6 @@ ps: ps-am
 ps-am:
 
 uninstall-am: uninstall-libscidynamic_link_la_etcDATA \
-	uninstall-libscidynamic_link_la_includeHEADERS \
 	uninstall-libscidynamic_link_la_rootDATA \
 	uninstall-libscidynamic_link_la_sci_gatewayDATA \
 	uninstall-libscidynamic_link_la_scriptDATA \
@@ -1103,7 +1066,6 @@ uninstall-am: uninstall-libscidynamic_link_la_etcDATA \
 	install-exec-am install-html install-html-am \
 	install-html-local install-info install-info-am \
 	install-libscidynamic_link_la_etcDATA \
-	install-libscidynamic_link_la_includeHEADERS \
 	install-libscidynamic_link_la_rootDATA \
 	install-libscidynamic_link_la_sci_gatewayDATA \
 	install-libscidynamic_link_la_scriptDATA \
@@ -1115,7 +1077,6 @@ uninstall-am: uninstall-libscidynamic_link_la_etcDATA \
 	mostlyclean-generic mostlyclean-libtool pdf pdf-am ps ps-am \
 	tags uninstall uninstall-am \
 	uninstall-libscidynamic_link_la_etcDATA \
-	uninstall-libscidynamic_link_la_includeHEADERS \
 	uninstall-libscidynamic_link_la_rootDATA \
 	uninstall-libscidynamic_link_la_sci_gatewayDATA \
 	uninstall-libscidynamic_link_la_scriptDATA \
