--- a/scilab/modules/elementary_functions/Makefile.in
+++ b/scilab/modules/elementary_functions/Makefile.in
@@ -37,7 +37,6 @@
 ##########
 
 
-
 VPATH = @srcdir@
 pkgdatadir = $(datadir)/@PACKAGE@
 pkgincludedir = $(includedir)/@PACKAGE@
@@ -57,8 +56,7 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
-DIST_COMMON = $(libscielementary_functions_la_include_HEADERS) \
-	$(srcdir)/Makefile.am $(srcdir)/Makefile.in \
+DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in \
 	$(top_srcdir)/Makefile.incl.am
 @NEED_JAVA_TRUE@am__append_1 = java
 subdir = modules/elementary_functions
@@ -106,8 +104,7 @@ am__base_list = \
 am__installdirs = "$(DESTDIR)$(pkglibdir)" \
 	"$(DESTDIR)$(libscielementary_functions_la_etcdir)" \
 	"$(DESTDIR)$(libscielementary_functions_la_rootdir)" \
-	"$(DESTDIR)$(libscielementary_functions_la_sci_gatewaydir)" \
-	"$(DESTDIR)$(libscielementary_functions_la_includedir)"
+	"$(DESTDIR)$(libscielementary_functions_la_sci_gatewaydir)"
 LTLIBRARIES = $(noinst_LTLIBRARIES) $(pkglib_LTLIBRARIES)
 libdummy_elementary_functions_la_LIBADD =
 am_libdummy_elementary_functions_la_OBJECTS =  \
@@ -518,7 +515,6 @@ DIST_SOURCES = $(libdummy_elementary_functions_la_SOURCES) \
 DATA = $(libscielementary_functions_la_etc_DATA) \
 	$(libscielementary_functions_la_root_DATA) \
 	$(libscielementary_functions_la_sci_gateway_DATA)
-HEADERS = $(libscielementary_functions_la_include_HEADERS)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
@@ -1176,23 +1172,6 @@ libscielementary_functions_la_etc_DATA = etc/elementary_functions.quit etc/eleme
 #### elementary_functions : gateway declaration ####
 libscielementary_functions_la_sci_gatewaydir = $(mydatadir)/sci_gateway
 libscielementary_functions_la_sci_gateway_DATA = sci_gateway/elementary_functions_gateway.xml
-
-#### elementary_functions : include files ####
-libscielementary_functions_la_includedir = $(pkgincludedir)
-libscielementary_functions_la_include_HEADERS = includes/sci_tools.h \
-includes/gw_elementary_functions.h \
-includes/elementary_functions.h \
-includes/xerhlt.h \
-includes/idmax.h \
-includes/idmin.h \
-includes/int2db.h \
-includes/rea2b.h \
-includes/rea2db.h \
-includes/scidcopy.h \
-includes/unsfdcopy.h \
-includes/finite.h \
-includes/vfinite.h
-
 
 # Where all the Scilab stuff is installed (macros, help, ...)
 mydatadir = $(pkgdatadir)/modules/$(modulename)
@@ -2861,26 +2840,6 @@ uninstall-libscielementary_functions_la_sci_gatewayDATA:
 	test -n "$$files" || exit 0; \
 	echo " ( cd '$(DESTDIR)$(libscielementary_functions_la_sci_gatewaydir)' && rm -f" $$files ")"; \
 	cd "$(DESTDIR)$(libscielementary_functions_la_sci_gatewaydir)" && rm -f $$files
-install-libscielementary_functions_la_includeHEADERS: $(libscielementary_functions_la_include_HEADERS)
-	@$(NORMAL_INSTALL)
-	test -z "$(libscielementary_functions_la_includedir)" || $(MKDIR_P) "$(DESTDIR)$(libscielementary_functions_la_includedir)"
-	@list='$(libscielementary_functions_la_include_HEADERS)'; test -n "$(libscielementary_functions_la_includedir)" || list=; \
-	for p in $$list; do \
-	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
-	  echo "$$d$$p"; \
-	done | $(am__base_list) | \
-	while read files; do \
-	  echo " $(INSTALL_HEADER) $$files '$(DESTDIR)$(libscielementary_functions_la_includedir)'"; \
-	  $(INSTALL_HEADER) $$files "$(DESTDIR)$(libscielementary_functions_la_includedir)" || exit $$?; \
-	done
-
-uninstall-libscielementary_functions_la_includeHEADERS:
-	@$(NORMAL_UNINSTALL)
-	@list='$(libscielementary_functions_la_include_HEADERS)'; test -n "$(libscielementary_functions_la_includedir)" || list=; \
-	files=`for p in $$list; do echo $$p; done | sed -e 's|^.*/||'`; \
-	test -n "$$files" || exit 0; \
-	echo " ( cd '$(DESTDIR)$(libscielementary_functions_la_includedir)' && rm -f" $$files ")"; \
-	cd "$(DESTDIR)$(libscielementary_functions_la_includedir)" && rm -f $$files
 
 ID: $(HEADERS) $(SOURCES) $(LISP) $(TAGS_FILES)
 	list='$(SOURCES) $(HEADERS) $(LISP) $(TAGS_FILES)'; \
@@ -2967,9 +2926,9 @@ distdir: $(DISTFILES)
 check-am: all-am
 	$(MAKE) $(AM_MAKEFLAGS) check-local
 check: check-am
-all-am: Makefile $(LTLIBRARIES) $(DATA) $(HEADERS) all-local
+all-am: Makefile $(LTLIBRARIES) $(DATA) all-local
 installdirs:
-	for dir in "$(DESTDIR)$(pkglibdir)" "$(DESTDIR)$(libscielementary_functions_la_etcdir)" "$(DESTDIR)$(libscielementary_functions_la_rootdir)" "$(DESTDIR)$(libscielementary_functions_la_sci_gatewaydir)" "$(DESTDIR)$(libscielementary_functions_la_includedir)"; do \
+	for dir in "$(DESTDIR)$(pkglibdir)" "$(DESTDIR)$(libscielementary_functions_la_etcdir)" "$(DESTDIR)$(libscielementary_functions_la_rootdir)" "$(DESTDIR)$(libscielementary_functions_la_sci_gatewaydir)"; do \
 	  test -z "$$dir" || $(MKDIR_P) "$$dir"; \
 	done
 install: install-am
@@ -3022,7 +2981,6 @@ info-am:
 
 install-data-am: install-data-local \
 	install-libscielementary_functions_la_etcDATA \
-	install-libscielementary_functions_la_includeHEADERS \
 	install-libscielementary_functions_la_rootDATA \
 	install-libscielementary_functions_la_sci_gatewayDATA
 
@@ -3071,7 +3029,6 @@ ps: ps-am
 ps-am:
 
 uninstall-am: uninstall-libscielementary_functions_la_etcDATA \
-	uninstall-libscielementary_functions_la_includeHEADERS \
 	uninstall-libscielementary_functions_la_rootDATA \
 	uninstall-libscielementary_functions_la_sci_gatewayDATA \
 	uninstall-pkglibLTLIBRARIES
@@ -3088,7 +3045,6 @@ uninstall-am: uninstall-libscielementary_functions_la_etcDATA \
 	install-dvi-am install-exec install-exec-am install-html \
 	install-html-am install-html-local install-info \
 	install-info-am install-libscielementary_functions_la_etcDATA \
-	install-libscielementary_functions_la_includeHEADERS \
 	install-libscielementary_functions_la_rootDATA \
 	install-libscielementary_functions_la_sci_gatewayDATA \
 	install-man install-pdf install-pdf-am \
@@ -3098,7 +3054,6 @@ uninstall-am: uninstall-libscielementary_functions_la_etcDATA \
 	mostlyclean-compile mostlyclean-generic mostlyclean-libtool \
 	pdf pdf-am ps ps-am tags uninstall uninstall-am \
 	uninstall-libscielementary_functions_la_etcDATA \
-	uninstall-libscielementary_functions_la_includeHEADERS \
 	uninstall-libscielementary_functions_la_rootDATA \
 	uninstall-libscielementary_functions_la_sci_gatewayDATA \
 	uninstall-pkglibLTLIBRARIES
