--- a/scilab/modules/graphics/Makefile.in
+++ b/scilab/modules/graphics/Makefile.in
@@ -44,7 +44,6 @@
 ##########
 
 
-
 VPATH = @srcdir@
 pkgdatadir = $(datadir)/@PACKAGE@
 pkgincludedir = $(includedir)/@PACKAGE@
@@ -65,8 +64,7 @@ POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
 @GUI_TRUE@am__append_1 = libscigraphics.la
-DIST_COMMON = $(libscigraphics_la_include_HEADERS) \
-	$(srcdir)/Makefile.am $(srcdir)/Makefile.in \
+DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in \
 	$(top_srcdir)/Makefile.incl.am
 @NEED_JAVA_TRUE@am__append_2 = java
 subdir = modules/graphics
@@ -115,8 +113,7 @@ am__installdirs = "$(DESTDIR)$(pkglibdir)" \
 	"$(DESTDIR)$(libscigraphics_la_etcdir)" \
 	"$(DESTDIR)$(libscigraphics_la_rootdir)" \
 	"$(DESTDIR)$(libscigraphics_la_sci_gatewaydir)" \
-	"$(DESTDIR)$(libscigraphics_la_geddir)" \
-	"$(DESTDIR)$(libscigraphics_la_includedir)"
+	"$(DESTDIR)$(libscigraphics_la_geddir)"
 LTLIBRARIES = $(pkglib_LTLIBRARIES)
 libscigraphics_disable_la_LIBADD =
 am_libscigraphics_disable_la_OBJECTS =  \
@@ -519,7 +516,6 @@ DIST_SOURCES = $(libscigraphics_disable_la_SOURCES) \
 DATA = $(libscigraphics_la_etc_DATA) $(libscigraphics_la_root_DATA) \
 	$(libscigraphics_la_sci_gateway_DATA) \
 	$(nobase_libscigraphics_la_ged_DATA)
-HEADERS = $(libscigraphics_la_include_HEADERS)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
@@ -1176,45 +1172,6 @@ libscigraphics_la_LIBADD = $(top_builddir)/libs/hashtable/libscihashtable.la $(t
 #### graphics : gateway declaration ####
 libscigraphics_la_sci_gatewaydir = $(mydatadir)/sci_gateway
 libscigraphics_la_sci_gateway_DATA = sci_gateway/graphics_gateway.xml
-
-#### graphics : include files ####
-libscigraphics_la_includedir = $(pkgincludedir)
-libscigraphics_la_include_HEADERS = includes/GetCommandArg.h \
-includes/DefaultCommandArg.h \
-includes/Axes.h \
-includes/sciMatrix.h \
-includes/graphicModuleLoad.h \
-includes/GetProperty.h \
-includes/SetProperty.h \
-includes/BasicAlgos.h \
-includes/sciCall.h \
-includes/InitObjects.h \
-includes/Format.h \
-includes/Interaction.h \
-includes/HandleManagement.h \
-includes/WindowList.h \
-includes/PloEch.h \
-includes/DrawObjects.h \
-includes/ObjectStructure.h \
-includes/BuildObjects.h \
-includes/CloneObjects.h \
-includes/pixel_mode.h \
-includes/Champ.h \
-includes/StringMatrix.h \
-includes/gw_graphics.h \
-includes/DestroyObjects.h \
-includes/math_graphics.h \
-includes/CurrentObjectsManagement.h \
-includes/ObjectSelection.h \
-includes/axesScale.h \
-includes/Contour.h \
-includes/getDictionaryGetProperties.h \
-includes/getDictionarySetProperties.h \
-includes/GrayPlot.h \
-includes/TerminateGraphics.h \
-includes/Plot2d.h \
-includes/dynlib_graphics.h
-
 
 ### graphics : ged files ###
 libscigraphics_la_geddir = $(mydatadir)
@@ -4513,26 +4470,6 @@ uninstall-nobase_libscigraphics_la_gedDATA:
 	test -n "$$files" || exit 0; \
 	echo " ( cd '$(DESTDIR)$(libscigraphics_la_geddir)' && rm -f" $$files ")"; \
 	cd "$(DESTDIR)$(libscigraphics_la_geddir)" && rm -f $$files
-install-libscigraphics_la_includeHEADERS: $(libscigraphics_la_include_HEADERS)
-	@$(NORMAL_INSTALL)
-	test -z "$(libscigraphics_la_includedir)" || $(MKDIR_P) "$(DESTDIR)$(libscigraphics_la_includedir)"
-	@list='$(libscigraphics_la_include_HEADERS)'; test -n "$(libscigraphics_la_includedir)" || list=; \
-	for p in $$list; do \
-	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
-	  echo "$$d$$p"; \
-	done | $(am__base_list) | \
-	while read files; do \
-	  echo " $(INSTALL_HEADER) $$files '$(DESTDIR)$(libscigraphics_la_includedir)'"; \
-	  $(INSTALL_HEADER) $$files "$(DESTDIR)$(libscigraphics_la_includedir)" || exit $$?; \
-	done
-
-uninstall-libscigraphics_la_includeHEADERS:
-	@$(NORMAL_UNINSTALL)
-	@list='$(libscigraphics_la_include_HEADERS)'; test -n "$(libscigraphics_la_includedir)" || list=; \
-	files=`for p in $$list; do echo $$p; done | sed -e 's|^.*/||'`; \
-	test -n "$$files" || exit 0; \
-	echo " ( cd '$(DESTDIR)$(libscigraphics_la_includedir)' && rm -f" $$files ")"; \
-	cd "$(DESTDIR)$(libscigraphics_la_includedir)" && rm -f $$files
 
 ID: $(HEADERS) $(SOURCES) $(LISP) $(TAGS_FILES)
 	list='$(SOURCES) $(HEADERS) $(LISP) $(TAGS_FILES)'; \
@@ -4619,9 +4556,9 @@ distdir: $(DISTFILES)
 check-am: all-am
 	$(MAKE) $(AM_MAKEFLAGS) check-local
 check: check-am
-all-am: Makefile $(LTLIBRARIES) $(DATA) $(HEADERS) all-local
+all-am: Makefile $(LTLIBRARIES) $(DATA) all-local
 installdirs:
-	for dir in "$(DESTDIR)$(pkglibdir)" "$(DESTDIR)$(libscigraphics_la_etcdir)" "$(DESTDIR)$(libscigraphics_la_rootdir)" "$(DESTDIR)$(libscigraphics_la_sci_gatewaydir)" "$(DESTDIR)$(libscigraphics_la_geddir)" "$(DESTDIR)$(libscigraphics_la_includedir)"; do \
+	for dir in "$(DESTDIR)$(pkglibdir)" "$(DESTDIR)$(libscigraphics_la_etcdir)" "$(DESTDIR)$(libscigraphics_la_rootdir)" "$(DESTDIR)$(libscigraphics_la_sci_gatewaydir)" "$(DESTDIR)$(libscigraphics_la_geddir)"; do \
 	  test -z "$$dir" || $(MKDIR_P) "$$dir"; \
 	done
 install: install-am
@@ -4673,7 +4610,6 @@ info: info-am
 info-am:
 
 install-data-am: install-data-local install-libscigraphics_la_etcDATA \
-	install-libscigraphics_la_includeHEADERS \
 	install-libscigraphics_la_rootDATA \
 	install-libscigraphics_la_sci_gatewayDATA \
 	install-nobase_libscigraphics_la_gedDATA
@@ -4723,7 +4659,6 @@ ps: ps-am
 ps-am:
 
 uninstall-am: uninstall-libscigraphics_la_etcDATA \
-	uninstall-libscigraphics_la_includeHEADERS \
 	uninstall-libscigraphics_la_rootDATA \
 	uninstall-libscigraphics_la_sci_gatewayDATA \
 	uninstall-nobase_libscigraphics_la_gedDATA \
@@ -4741,7 +4676,6 @@ uninstall-am: uninstall-libscigraphics_la_etcDATA \
 	install-exec-am install-html install-html-am \
 	install-html-local install-info install-info-am \
 	install-libscigraphics_la_etcDATA \
-	install-libscigraphics_la_includeHEADERS \
 	install-libscigraphics_la_rootDATA \
 	install-libscigraphics_la_sci_gatewayDATA install-man \
 	install-nobase_libscigraphics_la_gedDATA install-pdf \
@@ -4751,7 +4685,6 @@ uninstall-am: uninstall-libscigraphics_la_etcDATA \
 	mostlyclean mostlyclean-compile mostlyclean-generic \
 	mostlyclean-libtool pdf pdf-am ps ps-am tags uninstall \
 	uninstall-am uninstall-libscigraphics_la_etcDATA \
-	uninstall-libscigraphics_la_includeHEADERS \
 	uninstall-libscigraphics_la_rootDATA \
 	uninstall-libscigraphics_la_sci_gatewayDATA \
 	uninstall-nobase_libscigraphics_la_gedDATA \
