--- a/scilab/modules/localization/Makefile.in
+++ b/scilab/modules/localization/Makefile.in
@@ -445,12 +445,8 @@ libscilocalization_la_sci_gateway_DATA = sci_gateway/localization_gateway.xml
 ####localization : include files ####
 libscilocalization_la_includedir = $(pkgincludedir)
 libscilocalization_la_include_HEADERS = includes/localization.h \
-includes/gw_localization.h \
-includes/InitializeLocalization.h \
 includes/setgetlanguage.h \
-includes/TerminateLocalization.h \
-includes/charEncoding.h \
-includes/dynlib_localization.h
+includes/charEncoding.h
 
 @GUI_TRUE@USEANT = 1
 
