--- a/scilab/modules/randlib/Makefile.in
+++ b/scilab/modules/randlib/Makefile.in
@@ -37,7 +37,6 @@
 ##########
 
 
-
 VPATH = @srcdir@
 pkgdatadir = $(datadir)/@PACKAGE@
 pkgincludedir = $(includedir)/@PACKAGE@
@@ -57,8 +56,7 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
-DIST_COMMON = $(libscirandlib_la_include_HEADERS) \
-	$(srcdir)/Makefile.am $(srcdir)/Makefile.in \
+DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in \
 	$(top_srcdir)/Makefile.incl.am
 @NEED_JAVA_TRUE@am__append_1 = java
 subdir = modules/randlib
@@ -106,8 +104,7 @@ am__base_list = \
 am__installdirs = "$(DESTDIR)$(pkglibdir)" \
 	"$(DESTDIR)$(libscirandlib_la_etcdir)" \
 	"$(DESTDIR)$(libscirandlib_la_rootdir)" \
-	"$(DESTDIR)$(libscirandlib_la_sci_gatewaydir)" \
-	"$(DESTDIR)$(libscirandlib_la_includedir)"
+	"$(DESTDIR)$(libscirandlib_la_sci_gatewaydir)"
 LTLIBRARIES = $(pkglib_LTLIBRARIES)
 libscirandlib_la_DEPENDENCIES =  \
 	$(top_builddir)/modules/core/libscicore.la \
@@ -154,7 +151,6 @@ SOURCES = $(libscirandlib_la_SOURCES)
 DIST_SOURCES = $(libscirandlib_la_SOURCES)
 DATA = $(libscirandlib_la_etc_DATA) $(libscirandlib_la_root_DATA) \
 	$(libscirandlib_la_sci_gateway_DATA)
-HEADERS = $(libscirandlib_la_include_HEADERS)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
@@ -453,15 +449,6 @@ libscirandlib_la_etc_DATA = etc/randlib.quit etc/randlib.start
 #### randlib : gateway declaration ####
 libscirandlib_la_sci_gatewaydir = $(mydatadir)/sci_gateway
 libscirandlib_la_sci_gateway_DATA = sci_gateway/randlib_gateway.xml
-
-#### randlib : include files ####
-libscirandlib_la_includedir = $(pkgincludedir)
-libscirandlib_la_include_HEADERS = includes/grand.h \
-includes/clcg4.h \
-includes/others_generators.h \
-includes/gw_randlib.h \
-includes/dynlib_randlib.h
-
 
 # Where all the Scilab stuff is installed (macros, help, ...)
 mydatadir = $(pkgdatadir)/modules/$(modulename)
@@ -852,26 +839,6 @@ uninstall-libscirandlib_la_sci_gatewayDATA:
 	test -n "$$files" || exit 0; \
 	echo " ( cd '$(DESTDIR)$(libscirandlib_la_sci_gatewaydir)' && rm -f" $$files ")"; \
 	cd "$(DESTDIR)$(libscirandlib_la_sci_gatewaydir)" && rm -f $$files
-install-libscirandlib_la_includeHEADERS: $(libscirandlib_la_include_HEADERS)
-	@$(NORMAL_INSTALL)
-	test -z "$(libscirandlib_la_includedir)" || $(MKDIR_P) "$(DESTDIR)$(libscirandlib_la_includedir)"
-	@list='$(libscirandlib_la_include_HEADERS)'; test -n "$(libscirandlib_la_includedir)" || list=; \
-	for p in $$list; do \
-	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
-	  echo "$$d$$p"; \
-	done | $(am__base_list) | \
-	while read files; do \
-	  echo " $(INSTALL_HEADER) $$files '$(DESTDIR)$(libscirandlib_la_includedir)'"; \
-	  $(INSTALL_HEADER) $$files "$(DESTDIR)$(libscirandlib_la_includedir)" || exit $$?; \
-	done
-
-uninstall-libscirandlib_la_includeHEADERS:
-	@$(NORMAL_UNINSTALL)
-	@list='$(libscirandlib_la_include_HEADERS)'; test -n "$(libscirandlib_la_includedir)" || list=; \
-	files=`for p in $$list; do echo $$p; done | sed -e 's|^.*/||'`; \
-	test -n "$$files" || exit 0; \
-	echo " ( cd '$(DESTDIR)$(libscirandlib_la_includedir)' && rm -f" $$files ")"; \
-	cd "$(DESTDIR)$(libscirandlib_la_includedir)" && rm -f $$files
 
 ID: $(HEADERS) $(SOURCES) $(LISP) $(TAGS_FILES)
 	list='$(SOURCES) $(HEADERS) $(LISP) $(TAGS_FILES)'; \
@@ -958,9 +925,9 @@ distdir: $(DISTFILES)
 check-am: all-am
 	$(MAKE) $(AM_MAKEFLAGS) check-local
 check: check-am
-all-am: Makefile $(LTLIBRARIES) $(DATA) $(HEADERS) all-local
+all-am: Makefile $(LTLIBRARIES) $(DATA) all-local
 installdirs:
-	for dir in "$(DESTDIR)$(pkglibdir)" "$(DESTDIR)$(libscirandlib_la_etcdir)" "$(DESTDIR)$(libscirandlib_la_rootdir)" "$(DESTDIR)$(libscirandlib_la_sci_gatewaydir)" "$(DESTDIR)$(libscirandlib_la_includedir)"; do \
+	for dir in "$(DESTDIR)$(pkglibdir)" "$(DESTDIR)$(libscirandlib_la_etcdir)" "$(DESTDIR)$(libscirandlib_la_rootdir)" "$(DESTDIR)$(libscirandlib_la_sci_gatewaydir)"; do \
 	  test -z "$$dir" || $(MKDIR_P) "$$dir"; \
 	done
 install: install-am
@@ -1012,7 +979,6 @@ info: info-am
 info-am:
 
 install-data-am: install-data-local install-libscirandlib_la_etcDATA \
-	install-libscirandlib_la_includeHEADERS \
 	install-libscirandlib_la_rootDATA \
 	install-libscirandlib_la_sci_gatewayDATA
 
@@ -1061,7 +1027,6 @@ ps: ps-am
 ps-am:
 
 uninstall-am: uninstall-libscirandlib_la_etcDATA \
-	uninstall-libscirandlib_la_includeHEADERS \
 	uninstall-libscirandlib_la_rootDATA \
 	uninstall-libscirandlib_la_sci_gatewayDATA \
 	uninstall-pkglibLTLIBRARIES
@@ -1078,7 +1043,6 @@ uninstall-am: uninstall-libscirandlib_la_etcDATA \
 	install-exec-am install-html install-html-am \
 	install-html-local install-info install-info-am \
 	install-libscirandlib_la_etcDATA \
-	install-libscirandlib_la_includeHEADERS \
 	install-libscirandlib_la_rootDATA \
 	install-libscirandlib_la_sci_gatewayDATA install-man \
 	install-pdf install-pdf-am install-pkglibLTLIBRARIES \
@@ -1087,7 +1051,6 @@ uninstall-am: uninstall-libscirandlib_la_etcDATA \
 	maintainer-clean-generic mostlyclean mostlyclean-compile \
 	mostlyclean-generic mostlyclean-libtool pdf pdf-am ps ps-am \
 	tags uninstall uninstall-am uninstall-libscirandlib_la_etcDATA \
-	uninstall-libscirandlib_la_includeHEADERS \
 	uninstall-libscirandlib_la_rootDATA \
 	uninstall-libscirandlib_la_sci_gatewayDATA \
 	uninstall-pkglibLTLIBRARIES
