--- a/scilab/modules/special_functions/Makefile.in
+++ b/scilab/modules/special_functions/Makefile.in
@@ -37,7 +37,6 @@
 ##########
 
 
-
 VPATH = @srcdir@
 pkgdatadir = $(datadir)/@PACKAGE@
 pkgincludedir = $(includedir)/@PACKAGE@
@@ -57,8 +56,7 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
-DIST_COMMON = $(libscispecial_functions_la_include_HEADERS) \
-	$(srcdir)/Makefile.am $(srcdir)/Makefile.in \
+DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in \
 	$(top_srcdir)/Makefile.incl.am
 @NEED_JAVA_TRUE@am__append_1 = java
 subdir = modules/special_functions
@@ -106,8 +104,7 @@ am__base_list = \
 am__installdirs = "$(DESTDIR)$(pkglibdir)" \
 	"$(DESTDIR)$(libscispecial_functions_la_etcdir)" \
 	"$(DESTDIR)$(libscispecial_functions_la_rootdir)" \
-	"$(DESTDIR)$(libscispecial_functions_la_sci_gatewaydir)" \
-	"$(DESTDIR)$(libscispecial_functions_la_includedir)"
+	"$(DESTDIR)$(libscispecial_functions_la_sci_gatewaydir)"
 LTLIBRARIES = $(pkglib_LTLIBRARIES)
 libscispecial_functions_la_DEPENDENCIES =  \
 	$(top_builddir)/modules/core/libscicore.la \
@@ -167,7 +164,6 @@ DIST_SOURCES = $(libscispecial_functions_la_SOURCES)
 DATA = $(libscispecial_functions_la_etc_DATA) \
 	$(libscispecial_functions_la_root_DATA) \
 	$(libscispecial_functions_la_sci_gateway_DATA)
-HEADERS = $(libscispecial_functions_la_include_HEADERS)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
@@ -429,9 +425,6 @@ sci_gateway/fortran/sci_f_oldbesselk.f \
 sci_gateway/fortran/sci_f_calerf.f
 
 libscispecial_functions_la_includedir = $(pkgincludedir)
-libscispecial_functions_la_include_HEADERS = includes/gw_special_functions1.h \
-includes/gw_special_functions2.h
-
 libscispecial_functions_la_CFLAGS = -I$(srcdir)/includes/ \
 -I$(top_srcdir)/modules/api_scilab/includes \
 -I$(top_srcdir)/modules/elementary_functions/includes/ \
@@ -853,26 +846,6 @@ uninstall-libscispecial_functions_la_sci_gatewayDATA:
 	test -n "$$files" || exit 0; \
 	echo " ( cd '$(DESTDIR)$(libscispecial_functions_la_sci_gatewaydir)' && rm -f" $$files ")"; \
 	cd "$(DESTDIR)$(libscispecial_functions_la_sci_gatewaydir)" && rm -f $$files
-install-libscispecial_functions_la_includeHEADERS: $(libscispecial_functions_la_include_HEADERS)
-	@$(NORMAL_INSTALL)
-	test -z "$(libscispecial_functions_la_includedir)" || $(MKDIR_P) "$(DESTDIR)$(libscispecial_functions_la_includedir)"
-	@list='$(libscispecial_functions_la_include_HEADERS)'; test -n "$(libscispecial_functions_la_includedir)" || list=; \
-	for p in $$list; do \
-	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
-	  echo "$$d$$p"; \
-	done | $(am__base_list) | \
-	while read files; do \
-	  echo " $(INSTALL_HEADER) $$files '$(DESTDIR)$(libscispecial_functions_la_includedir)'"; \
-	  $(INSTALL_HEADER) $$files "$(DESTDIR)$(libscispecial_functions_la_includedir)" || exit $$?; \
-	done
-
-uninstall-libscispecial_functions_la_includeHEADERS:
-	@$(NORMAL_UNINSTALL)
-	@list='$(libscispecial_functions_la_include_HEADERS)'; test -n "$(libscispecial_functions_la_includedir)" || list=; \
-	files=`for p in $$list; do echo $$p; done | sed -e 's|^.*/||'`; \
-	test -n "$$files" || exit 0; \
-	echo " ( cd '$(DESTDIR)$(libscispecial_functions_la_includedir)' && rm -f" $$files ")"; \
-	cd "$(DESTDIR)$(libscispecial_functions_la_includedir)" && rm -f $$files
 
 ID: $(HEADERS) $(SOURCES) $(LISP) $(TAGS_FILES)
 	list='$(SOURCES) $(HEADERS) $(LISP) $(TAGS_FILES)'; \
@@ -959,9 +932,9 @@ distdir: $(DISTFILES)
 check-am: all-am
 	$(MAKE) $(AM_MAKEFLAGS) check-local
 check: check-am
-all-am: Makefile $(LTLIBRARIES) $(DATA) $(HEADERS) all-local
+all-am: Makefile $(LTLIBRARIES) $(DATA) all-local
 installdirs:
-	for dir in "$(DESTDIR)$(pkglibdir)" "$(DESTDIR)$(libscispecial_functions_la_etcdir)" "$(DESTDIR)$(libscispecial_functions_la_rootdir)" "$(DESTDIR)$(libscispecial_functions_la_sci_gatewaydir)" "$(DESTDIR)$(libscispecial_functions_la_includedir)"; do \
+	for dir in "$(DESTDIR)$(pkglibdir)" "$(DESTDIR)$(libscispecial_functions_la_etcdir)" "$(DESTDIR)$(libscispecial_functions_la_rootdir)" "$(DESTDIR)$(libscispecial_functions_la_sci_gatewaydir)"; do \
 	  test -z "$$dir" || $(MKDIR_P) "$$dir"; \
 	done
 install: install-am
@@ -1014,7 +987,6 @@ info-am:
 
 install-data-am: install-data-local \
 	install-libscispecial_functions_la_etcDATA \
-	install-libscispecial_functions_la_includeHEADERS \
 	install-libscispecial_functions_la_rootDATA \
 	install-libscispecial_functions_la_sci_gatewayDATA
 
@@ -1063,7 +1035,6 @@ ps: ps-am
 ps-am:
 
 uninstall-am: uninstall-libscispecial_functions_la_etcDATA \
-	uninstall-libscispecial_functions_la_includeHEADERS \
 	uninstall-libscispecial_functions_la_rootDATA \
 	uninstall-libscispecial_functions_la_sci_gatewayDATA \
 	uninstall-pkglibLTLIBRARIES
@@ -1080,7 +1051,6 @@ uninstall-am: uninstall-libscispecial_functions_la_etcDATA \
 	install-exec-am install-html install-html-am \
 	install-html-local install-info install-info-am \
 	install-libscispecial_functions_la_etcDATA \
-	install-libscispecial_functions_la_includeHEADERS \
 	install-libscispecial_functions_la_rootDATA \
 	install-libscispecial_functions_la_sci_gatewayDATA install-man \
 	install-pdf install-pdf-am install-pkglibLTLIBRARIES \
@@ -1090,7 +1060,6 @@ uninstall-am: uninstall-libscispecial_functions_la_etcDATA \
 	mostlyclean-generic mostlyclean-libtool pdf pdf-am ps ps-am \
 	tags uninstall uninstall-am \
 	uninstall-libscispecial_functions_la_etcDATA \
-	uninstall-libscispecial_functions_la_includeHEADERS \
 	uninstall-libscispecial_functions_la_rootDATA \
 	uninstall-libscispecial_functions_la_sci_gatewayDATA \
 	uninstall-pkglibLTLIBRARIES
