--- a/scilab/modules/tclsci/Makefile.in
+++ b/scilab/modules/tclsci/Makefile.in
@@ -37,7 +37,6 @@
 ##########
 
 
-
 VPATH = @srcdir@
 pkgdatadir = $(datadir)/@PACKAGE@
 pkgincludedir = $(includedir)/@PACKAGE@
@@ -57,8 +56,8 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
-DIST_COMMON = $(libscitclsci_la_include_HEADERS) $(srcdir)/Makefile.am \
-	$(srcdir)/Makefile.in $(top_srcdir)/Makefile.incl.am
+DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in \
+	$(top_srcdir)/Makefile.incl.am
 @NEED_JAVA_TRUE@am__append_1 = java
 subdir = modules/tclsci
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
@@ -106,8 +105,7 @@ am__installdirs = "$(DESTDIR)$(pkglibdir)" \
 	"$(DESTDIR)$(libscitclsci_la_etcdir)" \
 	"$(DESTDIR)$(libscitclsci_la_rootdir)" \
 	"$(DESTDIR)$(libscitclsci_la_sci_gatewaydir)" \
-	"$(DESTDIR)$(libscitclsci_la_tcldir)" \
-	"$(DESTDIR)$(libscitclsci_la_includedir)"
+	"$(DESTDIR)$(libscitclsci_la_tcldir)"
 LTLIBRARIES = $(pkglib_LTLIBRARIES)
 libscitclsci_la_DEPENDENCIES = $(top_builddir)/modules/action_binding/libsciaction_binding.la \
 	$(top_builddir)/modules/fileio/libscifileio.la \
@@ -188,7 +186,6 @@ DIST_SOURCES = $(am__libscitclsci_la_SOURCES_DIST)
 DATA = $(libscitclsci_la_etc_DATA) $(libscitclsci_la_root_DATA) \
 	$(libscitclsci_la_sci_gateway_DATA) \
 	$(nobase_libscitclsci_la_tcl_DATA)
-HEADERS = $(libscitclsci_la_include_HEADERS)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
@@ -655,20 +652,6 @@ tcl/TK_Scilab.tcl
 #### tclsci : gateway declaration ####
 libscitclsci_la_sci_gatewaydir = $(mydatadir)/sci_gateway
 libscitclsci_la_sci_gateway_DATA = sci_gateway/tclsci_gateway.xml
-
-#### tclsci : include files ####
-libscitclsci_la_includedir = $(pkgincludedir)
-libscitclsci_la_include_HEADERS = includes/setenvtcl.h \
-includes/GedManagement.h \
-includes/TCL_Global.h \
-includes/ScilabEval.h \
-includes/gw_tclsci.h \
-includes/InitializeTclTk.h \
-includes/TerminateTclTk.h \
-includes/GlobalTclInterp.h \
-includes/withtk.h \
-includes/dynlib_tclsci.h
-
 
 # Where all the Scilab stuff is installed (macros, help, ...)
 mydatadir = $(pkgdatadir)/modules/$(modulename)
@@ -1164,26 +1147,6 @@ uninstall-nobase_libscitclsci_la_tclDATA:
 	test -n "$$files" || exit 0; \
 	echo " ( cd '$(DESTDIR)$(libscitclsci_la_tcldir)' && rm -f" $$files ")"; \
 	cd "$(DESTDIR)$(libscitclsci_la_tcldir)" && rm -f $$files
-install-libscitclsci_la_includeHEADERS: $(libscitclsci_la_include_HEADERS)
-	@$(NORMAL_INSTALL)
-	test -z "$(libscitclsci_la_includedir)" || $(MKDIR_P) "$(DESTDIR)$(libscitclsci_la_includedir)"
-	@list='$(libscitclsci_la_include_HEADERS)'; test -n "$(libscitclsci_la_includedir)" || list=; \
-	for p in $$list; do \
-	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
-	  echo "$$d$$p"; \
-	done | $(am__base_list) | \
-	while read files; do \
-	  echo " $(INSTALL_HEADER) $$files '$(DESTDIR)$(libscitclsci_la_includedir)'"; \
-	  $(INSTALL_HEADER) $$files "$(DESTDIR)$(libscitclsci_la_includedir)" || exit $$?; \
-	done
-
-uninstall-libscitclsci_la_includeHEADERS:
-	@$(NORMAL_UNINSTALL)
-	@list='$(libscitclsci_la_include_HEADERS)'; test -n "$(libscitclsci_la_includedir)" || list=; \
-	files=`for p in $$list; do echo $$p; done | sed -e 's|^.*/||'`; \
-	test -n "$$files" || exit 0; \
-	echo " ( cd '$(DESTDIR)$(libscitclsci_la_includedir)' && rm -f" $$files ")"; \
-	cd "$(DESTDIR)$(libscitclsci_la_includedir)" && rm -f $$files
 
 ID: $(HEADERS) $(SOURCES) $(LISP) $(TAGS_FILES)
 	list='$(SOURCES) $(HEADERS) $(LISP) $(TAGS_FILES)'; \
@@ -1270,9 +1233,9 @@ distdir: $(DISTFILES)
 check-am: all-am
 	$(MAKE) $(AM_MAKEFLAGS) check-local
 check: check-am
-all-am: Makefile $(LTLIBRARIES) $(DATA) $(HEADERS) all-local
+all-am: Makefile $(LTLIBRARIES) $(DATA) all-local
 installdirs:
-	for dir in "$(DESTDIR)$(pkglibdir)" "$(DESTDIR)$(libscitclsci_la_etcdir)" "$(DESTDIR)$(libscitclsci_la_rootdir)" "$(DESTDIR)$(libscitclsci_la_sci_gatewaydir)" "$(DESTDIR)$(libscitclsci_la_tcldir)" "$(DESTDIR)$(libscitclsci_la_includedir)"; do \
+	for dir in "$(DESTDIR)$(pkglibdir)" "$(DESTDIR)$(libscitclsci_la_etcdir)" "$(DESTDIR)$(libscitclsci_la_rootdir)" "$(DESTDIR)$(libscitclsci_la_sci_gatewaydir)" "$(DESTDIR)$(libscitclsci_la_tcldir)"; do \
 	  test -z "$$dir" || $(MKDIR_P) "$$dir"; \
 	done
 install: install-am
@@ -1324,7 +1287,6 @@ info: info-am
 info-am:
 
 install-data-am: install-data-local install-libscitclsci_la_etcDATA \
-	install-libscitclsci_la_includeHEADERS \
 	install-libscitclsci_la_rootDATA \
 	install-libscitclsci_la_sci_gatewayDATA \
 	install-nobase_libscitclsci_la_tclDATA
@@ -1374,7 +1336,6 @@ ps: ps-am
 ps-am:
 
 uninstall-am: uninstall-libscitclsci_la_etcDATA \
-	uninstall-libscitclsci_la_includeHEADERS \
 	uninstall-libscitclsci_la_rootDATA \
 	uninstall-libscitclsci_la_sci_gatewayDATA \
 	uninstall-nobase_libscitclsci_la_tclDATA \
@@ -1392,7 +1353,6 @@ uninstall-am: uninstall-libscitclsci_la_etcDATA \
 	install-exec-am install-html install-html-am \
 	install-html-local install-info install-info-am \
 	install-libscitclsci_la_etcDATA \
-	install-libscitclsci_la_includeHEADERS \
 	install-libscitclsci_la_rootDATA \
 	install-libscitclsci_la_sci_gatewayDATA install-man \
 	install-nobase_libscitclsci_la_tclDATA install-pdf \
@@ -1402,7 +1362,6 @@ uninstall-am: uninstall-libscitclsci_la_etcDATA \
 	mostlyclean mostlyclean-compile mostlyclean-generic \
 	mostlyclean-libtool pdf pdf-am ps ps-am tags uninstall \
 	uninstall-am uninstall-libscitclsci_la_etcDATA \
-	uninstall-libscitclsci_la_includeHEADERS \
 	uninstall-libscitclsci_la_rootDATA \
 	uninstall-libscitclsci_la_sci_gatewayDATA \
 	uninstall-nobase_libscitclsci_la_tclDATA \
