--- a/scilab/modules/windows_tools/Makefile.in
+++ b/scilab/modules/windows_tools/Makefile.in
@@ -37,7 +37,6 @@
 ##########
 
 
-
 VPATH = @srcdir@
 pkgdatadir = $(datadir)/@PACKAGE@
 pkgincludedir = $(includedir)/@PACKAGE@
@@ -57,8 +56,7 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
-DIST_COMMON = $(libsciwindows_tools_la_include_HEADERS) \
-	$(srcdir)/Makefile.am $(srcdir)/Makefile.in \
+DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in \
 	$(top_srcdir)/Makefile.incl.am
 @NEED_JAVA_TRUE@am__append_1 = java
 subdir = modules/windows_tools
@@ -106,8 +104,7 @@ am__base_list = \
 am__installdirs = "$(DESTDIR)$(pkglibdir)" \
 	"$(DESTDIR)$(libsciwindows_tools_la_etcdir)" \
 	"$(DESTDIR)$(libsciwindows_tools_la_rootdir)" \
-	"$(DESTDIR)$(libsciwindows_tools_la_sci_gatewaydir)" \
-	"$(DESTDIR)$(libsciwindows_tools_la_includedir)"
+	"$(DESTDIR)$(libsciwindows_tools_la_sci_gatewaydir)"
 LTLIBRARIES = $(pkglib_LTLIBRARIES)
 libsciwindows_tools_la_DEPENDENCIES =  \
 	$(top_builddir)/modules/output_stream/libscioutput_stream.la
@@ -136,7 +133,6 @@ DIST_SOURCES = $(libsciwindows_tools_la_SOURCES)
 DATA = $(libsciwindows_tools_la_etc_DATA) \
 	$(libsciwindows_tools_la_root_DATA) \
 	$(libsciwindows_tools_la_sci_gateway_DATA)
-HEADERS = $(libsciwindows_tools_la_include_HEADERS)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
@@ -405,12 +401,6 @@ libsciwindows_tools_la_etc_DATA = etc/windows_tools.quit etc/windows_tools.start
 libsciwindows_tools_la_sci_gatewaydir = $(mydatadir)/sci_gateway
 libsciwindows_tools_la_sci_gateway_DATA = sci_gateway/windows_tools_gateway.xml
 
-#### windows_tools : include files ####
-libsciwindows_tools_la_includedir = $(pkgincludedir)
-libsciwindows_tools_la_include_HEADERS = includes/gw_windows_tools.h \
-includes/dynlib_windows_tools.h
-
-
 # Where all the Scilab stuff is installed (macros, help, ...)
 mydatadir = $(pkgdatadir)/modules/$(modulename)
 
@@ -642,26 +632,6 @@ uninstall-libsciwindows_tools_la_sci_gatewayDATA:
 	test -n "$$files" || exit 0; \
 	echo " ( cd '$(DESTDIR)$(libsciwindows_tools_la_sci_gatewaydir)' && rm -f" $$files ")"; \
 	cd "$(DESTDIR)$(libsciwindows_tools_la_sci_gatewaydir)" && rm -f $$files
-install-libsciwindows_tools_la_includeHEADERS: $(libsciwindows_tools_la_include_HEADERS)
-	@$(NORMAL_INSTALL)
-	test -z "$(libsciwindows_tools_la_includedir)" || $(MKDIR_P) "$(DESTDIR)$(libsciwindows_tools_la_includedir)"
-	@list='$(libsciwindows_tools_la_include_HEADERS)'; test -n "$(libsciwindows_tools_la_includedir)" || list=; \
-	for p in $$list; do \
-	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
-	  echo "$$d$$p"; \
-	done | $(am__base_list) | \
-	while read files; do \
-	  echo " $(INSTALL_HEADER) $$files '$(DESTDIR)$(libsciwindows_tools_la_includedir)'"; \
-	  $(INSTALL_HEADER) $$files "$(DESTDIR)$(libsciwindows_tools_la_includedir)" || exit $$?; \
-	done
-
-uninstall-libsciwindows_tools_la_includeHEADERS:
-	@$(NORMAL_UNINSTALL)
-	@list='$(libsciwindows_tools_la_include_HEADERS)'; test -n "$(libsciwindows_tools_la_includedir)" || list=; \
-	files=`for p in $$list; do echo $$p; done | sed -e 's|^.*/||'`; \
-	test -n "$$files" || exit 0; \
-	echo " ( cd '$(DESTDIR)$(libsciwindows_tools_la_includedir)' && rm -f" $$files ")"; \
-	cd "$(DESTDIR)$(libsciwindows_tools_la_includedir)" && rm -f $$files
 
 ID: $(HEADERS) $(SOURCES) $(LISP) $(TAGS_FILES)
 	list='$(SOURCES) $(HEADERS) $(LISP) $(TAGS_FILES)'; \
@@ -748,9 +718,9 @@ distdir: $(DISTFILES)
 check-am: all-am
 	$(MAKE) $(AM_MAKEFLAGS) check-local
 check: check-am
-all-am: Makefile $(LTLIBRARIES) $(DATA) $(HEADERS) all-local
+all-am: Makefile $(LTLIBRARIES) $(DATA) all-local
 installdirs:
-	for dir in "$(DESTDIR)$(pkglibdir)" "$(DESTDIR)$(libsciwindows_tools_la_etcdir)" "$(DESTDIR)$(libsciwindows_tools_la_rootdir)" "$(DESTDIR)$(libsciwindows_tools_la_sci_gatewaydir)" "$(DESTDIR)$(libsciwindows_tools_la_includedir)"; do \
+	for dir in "$(DESTDIR)$(pkglibdir)" "$(DESTDIR)$(libsciwindows_tools_la_etcdir)" "$(DESTDIR)$(libsciwindows_tools_la_rootdir)" "$(DESTDIR)$(libsciwindows_tools_la_sci_gatewaydir)"; do \
 	  test -z "$$dir" || $(MKDIR_P) "$$dir"; \
 	done
 install: install-am
@@ -803,7 +773,6 @@ info-am:
 
 install-data-am: install-data-local \
 	install-libsciwindows_tools_la_etcDATA \
-	install-libsciwindows_tools_la_includeHEADERS \
 	install-libsciwindows_tools_la_rootDATA \
 	install-libsciwindows_tools_la_sci_gatewayDATA
 
@@ -852,7 +821,6 @@ ps: ps-am
 ps-am:
 
 uninstall-am: uninstall-libsciwindows_tools_la_etcDATA \
-	uninstall-libsciwindows_tools_la_includeHEADERS \
 	uninstall-libsciwindows_tools_la_rootDATA \
 	uninstall-libsciwindows_tools_la_sci_gatewayDATA \
 	uninstall-pkglibLTLIBRARIES
@@ -869,7 +837,6 @@ uninstall-am: uninstall-libsciwindows_tools_la_etcDATA \
 	install-exec-am install-html install-html-am \
 	install-html-local install-info install-info-am \
 	install-libsciwindows_tools_la_etcDATA \
-	install-libsciwindows_tools_la_includeHEADERS \
 	install-libsciwindows_tools_la_rootDATA \
 	install-libsciwindows_tools_la_sci_gatewayDATA install-man \
 	install-pdf install-pdf-am install-pkglibLTLIBRARIES \
@@ -879,7 +846,6 @@ uninstall-am: uninstall-libsciwindows_tools_la_etcDATA \
 	mostlyclean-generic mostlyclean-libtool pdf pdf-am ps ps-am \
 	tags uninstall uninstall-am \
 	uninstall-libsciwindows_tools_la_etcDATA \
-	uninstall-libsciwindows_tools_la_includeHEADERS \
 	uninstall-libsciwindows_tools_la_rootDATA \
 	uninstall-libsciwindows_tools_la_sci_gatewayDATA \
 	uninstall-pkglibLTLIBRARIES
