hdf5 m4 => fix compilation link

--- a/scilab/modules/core/includes/machine.h.in
+++ b/scilab/modules/core/includes/machine.h.in
@@ -134,6 +134,9 @@
 /* Define to 1 if you have the `dl' library (-ldl). */
 #undef HAVE_LIBDL
 
+/* Define to 1 if you have the `hdf5' library (-lhdf5). */
+#undef HAVE_LIBHDF5
+
 /* Define to 1 if you have the <libintl.h> header file. */
 #undef HAVE_LIBINTL_H
 
