--- a/scilab/scilab-lib.properties.in
+++ b/scilab/scilab-lib.properties.in
@@ -17,6 +17,8 @@ jrosetta-API.jar=@JROSETTA_API@
 
 jrosetta-engine.jar=@JROSETTA_ENGINE@
 
+jlatexmath.jar=@JLATEXMATH@
+
 checkstyle.jar=${thirdparty.dir}/checkstyle/checkstyle-all-4.3.jar
 
 library.jvm.dir=${modules.dir}/jvm/${build.jar.dir}/
